src/test/deca/syntax/invalid/provided/boucles.deca
// Description:
//    Programme utilisant une boucle while de façon incorrecte.
//
// Resultats: Ligne 11 Erreur de syntaxe
//
// Historique:
//    cree le 01/01/2022

{
        int j = 5;
        while(j < 4{
        	println(j);
        }
}
